Work in progress on multiplayer support
